# examples

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cxx
source/overglad/: CMakeLists.txt
source/overglad/get_error/: enum.cxx  none.cxx  operation.cxx
source/overglad/header/: CMakeLists.txt
source/overglad/header/include/: header.hxx
source/overglad/header/window/: CMakeLists.txt
source/overglad/header/window/include/: header.hxx
source/overglad/redbook1/: 1_1.cxx  1_2.cxx  1_3.cxx  1_4.cxx  2_1.cxx  2_2.cxx
source/overglad/window/: Window.cxx
source/overglad/window/include/: Window.hxx  header.hxx
